Добавил роутингЛинкс и простую ссылку

--- a/pet-finder/src/app/app.component.html
+++ b/pet-finder/src/app/app.component.html
@@ -1,2 +1,7 @@
 <h1>Приложение</h1>
+<ul>
+  <li><a routerLink="">На главную</a></li>
+  <li><a routerLink="/auth">Авторизоваться</a></li>
+</ul>
+
 <router-outlet></router-outlet>
