--- a/pet-finder/src/app/pages/authorisation-page/authorisation-page.component.html
+++ b/pet-finder/src/app/pages/authorisation-page/authorisation-page.component.html
@@ -1,2 +1,20 @@
 <h3>Авторизация</h3>
-<a [routerLink]="/auth">На Главную</a>
+<div class="container">
+  <div class="form">
+    <div class="form__field">
+      <mat-form-field appearance="fill">
+        <mat-label>Имя пользователя</mat-label>
+        <input matInput placeholder="Вася">
+        <mat-hint>Введите имя пользователя</mat-hint>
+      </mat-form-field>
+    </div>
+    <div class="form__field">
+      <mat-form-field appearance="fill">
+        <mat-label>Пароль</mat-label>
+        <input matInput placeholder="123">
+        <mat-hint>Введите пароль</mat-hint>
+      </mat-form-field>
+    </div>
+  </div>
+</div>
+
