--- a/pet-finder/src/app/pages/authorisation-page/authorisation-page.component.html
+++ b/pet-finder/src/app/pages/authorisation-page/authorisation-page.component.html
@@ -1,20 +1,23 @@
 <h3>Авторизация</h3>
 <div class="container">
   <div class="form">
-    <div class="form__field">
-      <mat-form-field appearance="fill">
-        <mat-label>Имя пользователя</mat-label>
-        <input matInput placeholder="Вася">
-        <mat-hint>Введите имя пользователя</mat-hint>
-      </mat-form-field>
-    </div>
-    <div class="form__field">
-      <mat-form-field appearance="fill">
-        <mat-label>Пароль</mat-label>
-        <input matInput placeholder="123">
-        <mat-hint>Введите пароль</mat-hint>
-      </mat-form-field>
-    </div>
+    <from [formGroup]="authorisationFrom">
+      <div class="form__field">
+        <mat-form-field appearance="fill">
+          <mat-label>Имя пользователя</mat-label>
+          <input matInput placeholder="Вася" formControlName="userName">
+          <mat-hint>Введите имя пользователя</mat-hint>
+        </mat-form-field>
+      </div>
+      <div class="form__field">
+        <mat-form-field appearance="fill">
+          <mat-label>Пароль</mat-label>
+          <input matInput placeholder="123" formControlName="userPassword">
+          <mat-hint>Введите пароль</mat-hint>
+        </mat-form-field>
+      </div>
+      <button (click)="OnCLickAuthorisation()">Авторизоваться</button>
+    </from>
   </div>
 </div>
 
