--- a/pet-finder/src/app/pages/authorisation-page/authorisation-page.component.scss
+++ b/pet-finder/src/app/pages/authorisation-page/authorisation-page.component.scss
@@ -4,8 +4,8 @@
   justify-content: center;
   align-items: center;
   .form {
-    background: darkgray;
-    height: 210px;
-    width: 210px;
+    background: lightslategray;
+    border-radius: 6px;
+    padding: 12px;
   }
 }
